DaemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: node-exporter

  template:
    metadata:
      labels:
        app: node-exporter

    spec:

      tolerations:
      - operator: "Exists"

      containers:
      - name: node-exporter
        image: prom/node-exporter:latest

        ports:
        - containerPort: 9100
