NodeDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs

  template:
    metadata:
      labels:
        app: nodejs

    spec:

      tolerations:
      - key: "node"
        operator: "Equal"
        value: "worker"
        effect: "NoSchedule"

      containers:
      - name: nodejs
        image: alisalah20/myapp:v1

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "2Gi"

        volumeMounts:
        - name: app-logs
          mountPath: /usr/src/app/logs

      volumes:
      - name: app-logs
        persistentVolumeClaim:
          claimName: app-logs-pvc
